# robotics

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  package.xml  requirements.txt
docker/rviz/: Dockerfile  cyclonedds.xml
docs/: CAMERA.md  HARDWARE.md  INSTALL.md  MAPPING.md  NAVIGATION.md  VENDOR_OVERLAY.md  VENV_SETUP.md
launch/: joystick.launch.py
maps/: house.pgm  house.yaml
src/: README.md
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: nav2_params.yaml  slam_toolbox.yaml
src/bringup/launch/: all.launch.py  nav2.launch.py  slam.launch.py
src/drive_controller/: package.xml  setup.cfg  setup.py
src/drive_controller/drive_controller/: __init__.py  drive_controller_node.py
src/drive_controller/launch/: drive_controller.launch.py
src/foxglove_bridge_launcher/: CMakeLists.txt  package.xml
src/foxglove_bridge_launcher/launch/: bridge.launch.py
src/joystick/: CMakeLists.txt  package.xml
src/joystick/config/: joystick.yaml
src/joystick/launch/: joystick.launch.py
src/senses/: package.xml  setup.cfg  setup.py
src/senses/config/: rooms.yaml
src/senses/launch/: eyes.launch.py  senses.launch.py
src/senses/senses/: brain.py  ears.py  eyes.py  led.py  mouth.py  movement_mcp_server.py  movement_tools.py  room_markers.py  screen.py  semantic_map_tools.py  vision_tools.py  voice_agent.py
src/senses/senses/resource/: Hey-R-Two_en_raspberry-pi_v3_0_0.ppn
src/senses/test/: test_movement_mcp_server.py
src/tank_description/: CMakeLists.txt  package.xml
src/tank_description/urdf/: robot.urdf  robot.urdf.xacro  tank.urdf.xacro
whisper/: Hey-R-two_en_mac_v3_0_0.ppn  Makefile  README.md  requirements.txt  speech_recog.py
