<?xml version="1.0"?>
<package format="3">
  <name>drive_controller</name>
  <version>0.0.1</version>
  <description>Drives motors using /cmd_vel and L298N</description>

  <maintainer email="jelsey@example.com">James Elsey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
