<?xml version="1.0"?>
<package format="3">
  <name>joystick</name>
  <version>0.0.1</version>
  <description>Joystick launch for robot</description>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <maintainer email="jelsey@example.com">James Elsey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
</package>
