<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senses</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="james.elsey@gmail.com">jelsey</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <exec_depend>ament_index_python</exec_depend>


  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-soundfile</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-pvporcupine-pip</exec_depend>
  <exec_depend>python3-openai-whisper-pip</exec_depend>
  <exec_depend>python3-playsound-pip</exec_depend>
  <exec_depend>python3-pyttsx3-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>python-gc9d01-library-pip</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <resource>senses</resource>
  </export>
</package>
